# rtrb

benches/: single_thread_single_byte.rs  single_thread_with_chunks.rs  slices.rs  two_threads_single_byte.rs
performance-comparison/: Cargo.toml
performance-comparison/benches/: single_thread.rs  two_threads.rs
src/: chunks.rs  lib.rs
